# gnome-shell-extension-redshift

./: .hgignore  Makefile.am  README.md  autogen.sh  configure.ac
src/: extension.js  metadata.json  prefs.js  redshift-prefs.ui  util.js
src/schemas/: org.gnome.shell.extensions.redshift.gschema.xml
